<resources>
    <!--<string name="app_name">1 Mile</string>-->

    <!-- Strings related to login -->
    <string name="google_maps_key">AIzaSyCKxL9YpnXpIPYmGa4ZifTGpbbLr59KLOI</string>
    <!--<string name="google_maps_key">AIzaSyCl36Q9zEz675KtkXxx-TSUxYuZG7cxTMY</string>-->

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_indoor_mapping">IndoorMapping</string>
    <string name="take_picture">Take Pic</string>
    <string name="select_images_gallery">Select Images</string>
    <string name="add_restroom">Add Toilet</string>
    <string name="male_compatible">Male Compatible</string>
    <string name="female_compatible">Female Compatible</string>
    <string name="disabled_compatible">Disabled Compatible</string>
    <string name="address">Address Here</string>
    <string name="submit_restroom">Submit Toilet</string>
    <string name="click_pic">Click and Add one or More Pictures</string>
    <string name="directions">Directions</string>
    <string name="shout">Shout!</string>
    <string name="tag_line">Go Local</string>
    <string name="nitrogen_dioxide">Nitrogen Dioxide</string>
    <string name="carbon_oxide">Carbon Monoxide</string>
    <string name="sulphur_dioxide">Sulphur Dioxide</string>
    <string name="pollution_data_not_available">Sorry, Air Pollution data is not available for your
        location.Please ask the authorities to install an air pollution sensor in your city.</string>
    <string name="news_detail">News Detail</string>
    <string name="toilet_data_not_available">Sorry, our database is not showing a public toilet near
        you. If you see one, please add it using the button above.</string>
    <string name="add_photos">Add More Photos to the Restroom</string>
    <string name="gps_network_not_enabled">1 Mile requires your location to be turned on.</string>
    <string name="open_location_settings">Open Location Setting</string>
    <string name="cancel">Cancel</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_photo">Add Photo</string>
    <string name="uploadPhoto">Upload Photo</string>
    <string name="photos_not_available">It seems there are no images around your location. Please add an image that is unique to your location (a landmark, for example) using the button above.</string>
    <string name="mock_location_message">Please disable mock location for using this app</string>
    <string name="mock_location_title">Mock location is turned ON!</string>
    <string name="shoutToggle">Shouts</string>
    <string name="toiletToggle">Toilets</string>
    <string name="galleryToggle">Gallery</string>
    <string name="pollutionToggle">Pollution</string>
    <string name="newsToggle">News</string>
    <string name="load_more">Load More</string>
    <string name="get_paytm_cash">Get Paytm cash</string>
    <string name="enter_your_paytm_mobile_number">Enter your mobile number with Paytm Account</string>
    <string name="mobile">Paytm Mobile Number</string>
    <string name="proceed">Proceed</string>
    <string name="skip">Skip</string>
    <string name="help">Help</string>
    <string name="okay">Okay</string>
    <string name="help_message">Help Message</string>
    <string name="photoDescription">Photo Description</string>
    <string name="note_gallery">Note: Please add images of landmarks and other places unique to your locality in order to get it approved by the admin. You will get Paytm cash as soon as the photo is approved.</string>
    <string name="note_restroom">Note: Please add images of outward appearance of Public Toilets only, in order to get it approved by admin. You will get Paytm cash as soon as the public toilet is approved.</string>
    <string name="start_sos">Start SOS</string>
    <string name="enable_sos_service_text">Click on the button three times to enable SOS service.</string>
    <string name="disable_sos_service_text">Click on the button three times to disable SOS service.</string>
    <string name="selected_contacts">Selected Contacts</string>
    <string name="emergencyToggle">Emergency</string>
    <string name="update">Update</string>
    <string name="add_responders">Add Responders</string>
    <string name="sos">SOS</string>
    <string name="contact_list">Contact List</string>
    <string name="otp">OTP</string>
    <string name="verify_mobile_number">Verify your PAYTM mobile number to get Instant Cash.</string>
    <string name="zero">0</string>
</resources>
