<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    app:cardCornerRadius="5dp"
    app:contentPadding="5dp"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/help"
            android:textColor="#000000"
            android:textScaleX="1"
            android:textSize="20dp" />


        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/help_message"
            android:textColor="#000000"
            android:textScaleX="1"
            android:textSize="16dp" />


        <Button
            android:id="@+id/okay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:layout_weight="1"
            android:background="@color/black"
            android:text="@string/okay"
            android:textColor="@color/white" />

    </LinearLayout>


</android.support.v7.widget.CardView>
