<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:nestedScrollingEnabled="true">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/black"
        android:title="@string/add_restroom"
        android:titleTextColor="@color/white"
        app:title="@string/add_restroom"
        app:titleTextColor="@color/white"

        />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/submit_restroom"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/restroom_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                app:contentPadding="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:visibility="gone">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="4dp"
                            android:padding="4dp"
                            android:src="@drawable/address" />

                        <TextView
                            android:id="@+id/restroom_latitude_longitude"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="4dp"
                            android:padding="4dp"
                            android:textColor="#424242"
                            android:textSize="16dp" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="4dp"
                        android:gravity="center"
                        android:padding="4dp"
                        android:text="@string/add_restroom"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_large" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="4dp"
                            android:padding="4dp"
                            android:src="@drawable/address" />

                        <TextView
                            android:id="@+id/restroom_address"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="4dp"
                            android:padding="4dp"
                            android:textColor="#000000"
                            android:textSize="14dp"

                            />

                    </LinearLayout>


                    <CheckBox
                        android:id="@+id/male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:padding="4dp"
                        android:text="@string/male_compatible" />

                    <CheckBox
                        android:id="@+id/female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:padding="4dp"
                        android:text="@string/female_compatible" />

                    <CheckBox
                        android:id="@+id/disabled"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:padding="4dp"
                        android:text="@string/disabled_compatible" />


                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:drawSelectorOnTop="true"
                        android:focusable="true"
                        android:gravity="center"
                        android:nestedScrollingEnabled="false"
                        android:padding="4dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/cameraButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="12dp"
                            android:padding="12dp"
                            android:src="@drawable/upload_image" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="@string/click_pic" />
                    </LinearLayout>

                </LinearLayout>
            </android.support.v7.widget.CardView>


        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


    <LinearLayout
        android:id="@+id/submit_restroom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10">

            <Button
                android:id="@+id/galleryButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/select_images_gallery"
                android:visibility="gone" />

            <Button
                android:id="@+id/cameraButton1"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/take_picture"
                android:visibility="gone" />

        </LinearLayout>

        <Button
            android:id="@+id/uploadButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit_restroom" />

    </LinearLayout>

</RelativeLayout>