<android.support.v4.widget.NestedScrollView android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">


        <RelativeLayout
            android:id="@+id/allLayouts"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <LinearLayout
                android:id="@+id/responderLayout"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical">

                <Button
                    android:background="@drawable/border_button"
                    android:focusableInTouchMode="true"
                    android:id="@+id/add_contacts_button"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:layout_width="match_parent"
                    android:text="@string/add_responders" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/sosLayout"
                android:layout_below="@+id/responderLayout"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical">


                <com.fame.plumbum.chataround.helper.FButton
                    android:id="@+id/sosButton"
                    android:layout_gravity="center"
                    android:layout_height="240dp"
                    android:layout_margin="12dp"
                    android:layout_marginTop="56dp"
                    android:layout_width="240dp"
                    android:text="@string/sos"
                    android:textSize="48dp"
                    fbutton:buttonColor="@color/gray"
                    fbutton:cornerRadius="120dp"
                    fbutton:shadowEnabled="true"
                    fbutton:shadowHeight="4dp" />

                <TextView
                    android:background="@drawable/translucent_button"
                    android:id="@+id/sosButtonOld"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_margin="48dp"
                    android:layout_width="wrap_content"
                    android:padding="48dp"
                    android:text="@string/sos"
                    android:textSize="48dp"
                    android:visibility="gone" />

                <TextView
                    android:gravity="center_horizontal"
                    android:id="@+id/sos_service_text"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:text="@string/enable_sos_service_text"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

            </LinearLayout>


            <RelativeLayout
                android:layout_below="@+id/sosLayout"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:orientation="vertical">

                <TextView
                    android:drawableLeft="@drawable/ic_contact_phone_black_24dp"
                    android:drawablePadding="5dp"
                    android:id="@+id/selected_contacts_text"
                    android:layout_alignParentStart="true"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="@string/selected_contacts"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/emergency_contacts_recycler_view"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/selected_contacts_text"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="11dp"
                    android:layout_width="match_parent"
                    android:nestedScrollingEnabled="false" />


                <LinearLayout
                    android:id="@+id/add_contacts_layout"
                    android:layout_below="@+id/emergency_contacts_recycler_view"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:gravity="center"
                        android:id="@+id/add_contacts_text_view"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                </LinearLayout>

            </RelativeLayout>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_centerInParent="true"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" />


        </RelativeLayout>

    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>
